[gd_scene load_steps=2 format=3 uid="uid://ct5n4vxkrx1pn"]

[ext_resource type="Script" path="res://addons/gfred2/scripts/controllers/asset_browser_dock_controller.gd" id="1_7v4q3"]

[node name="AssetBrowserDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_7v4q3")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/Header"]
layout_mode = 2
text = "Asset Browser"

[node name="Spacer" type="Control" parent="MainContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="MainContainer/Header"]
layout_mode = 2
text = "Refresh"

[node name="FilterContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="FilterLabel" type="Label" parent="MainContainer/FilterContainer"]
layout_mode = 2
text = "Filter:"

[node name="AssetTypeFilter" type="OptionButton" parent="MainContainer/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="SearchLabel" type="Label" parent="MainContainer/SearchContainer"]
layout_mode = 2
text = "Search:"

[node name="SearchEdit" type="LineEdit" parent="MainContainer/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter assets..."

[node name="ContentSplitter" type="HSplitContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="CategoryTree" type="Tree" parent="MainContainer/ContentSplitter"]
layout_mode = 2
hide_root = true

[node name="AssetContent" type="VBoxContainer" parent="MainContainer/ContentSplitter"]
layout_mode = 2

[node name="AssetGrid" type="GridContainer" parent="MainContainer/ContentSplitter/AssetContent"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="PreviewContainer" type="VBoxContainer" parent="MainContainer/ContentSplitter/AssetContent"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)

[node name="PreviewLabel" type="Label" parent="MainContainer/ContentSplitter/AssetContent/PreviewContainer"]
layout_mode = 2
text = "Asset Preview"

[node name="PreviewPanel" type="Panel" parent="MainContainer/ContentSplitter/AssetContent/PreviewContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AssetDetails" type="VBoxContainer" parent="MainContainer/ContentSplitter/AssetContent/PreviewContainer"]
layout_mode = 2

[node name="AssetNameLabel" type="Label" parent="MainContainer/ContentSplitter/AssetContent/PreviewContainer/AssetDetails"]
layout_mode = 2
text = "No asset selected"

[node name="AssetInfoLabel" type="Label" parent="MainContainer/ContentSplitter/AssetContent/PreviewContainer/AssetDetails"]
layout_mode = 2
text = ""
autowrap_mode = 2